# ethrexdb

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: test.yaml
benches/: db_benchmark.rs
examples/: profiling.rs
src/: db.rs  file_manager.rs  lib.rs  serialization.rs
