[package]
name = "ethrexdb"
version = "0.1.0"
edition = "2024"
description = "A simple database implementation based on the Merkle Patricia Trie (MPT)."
keywords = ["database", "merkle", "patricia", "trie"]
categories = ["database-implementations"]

[dependencies]
memmap2 = "0.9.7"
tempdir = "0.3.7"

# ethrex
# ethrex-trie = { git = "https://github.com/lambdaclass/ethrex/", package = "ethrex-trie", rev = "5acad245d6893db13cc2e28c53ba064f33a7e51c" }
ethrex-trie = { path = "../ethrex/crates/common/trie/" }

[dev-dependencies]
anyhow = "1.0.86"
criterion = { version = "0.5", features = ["html_reports"] }
ethrex-storage = { path = "../ethrex/crates/storage/" , features = ["libmdbx"] }
libmdbx = { version = "=0.5.3", features = ["orm"] }
sha3 = "0.10.8"
rand = "0.8.5"

[[bench]]
name = "db_benchmark"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = 2
